fix spacing

--- a/src/css/components/intro-episode.scss
+++ b/src/css/components/intro-episode.scss
@@ -15,6 +15,7 @@
   > .keywords {
     width: 100%;
     max-width: 50vw;
+    margin-bottom: $padding-font-x;
     z-index: 1;
   }
 
